[package]
name = "dee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.5"
rocket = { version = "=0.5.0", features = [ "json" ] }
rocket_okapi = { version = "=0.8.0", features = [ "swagger" ] }
schemars = "0.8.16"
serde = { version = "1.0", features = ["derive"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
